Fix previous page button not showing images correctly

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -600,12 +600,26 @@ section {
     z-index: 3;
 }
 
+.flipbook .page.flipping-in {
+    animation: flipIn 0.8s cubic-bezier(0.4, 0.0, 0.2, 1) forwards;
+    z-index: 3;
+}
+
 @keyframes flipOut {
     0% {
         transform: rotateY(0deg);
     }
     100% {
         transform: rotateY(-180deg);
+    }
+}
+
+@keyframes flipIn {
+    0% {
+        transform: rotateY(-180deg);
+    }
+    100% {
+        transform: rotateY(0deg);
     }
 }
 
